# json_compilation_db

./: Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_on_push.yml  release.yml  rust.yml
src/: api.rs  file.rs  inner.rs  iterator.rs  lib.rs  type_de.rs  type_ser.rs
tests/: test.rs
