[package]
name = "json-cdb"
version = "0.1.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
shellwords = "1.0"

[dev-dependencies]
tempfile = "3.1"
