[package]
name = "json_compilation_db"
version = "0.2.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
description = "Rust crate to read/write JSON compilation database file."
keywords = ["clang", "clang-tooling", "compilation-database"]
repository = "https://github.com/rizsotto/json_compilation_db"
homepage = "https://github.com/rizsotto/json_compilation_db"
documentation = "https://docs.rs/json_compilation_db/"
license = "MIT"
edition = "2018"

[dependencies]
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
shell-words = "1.0"

[dev-dependencies]
tempfile = "3.2"
