[package]
name = "json_compilation_db"
version = "1.0.0"
authors = ["László Nagy <rizsotto at gmail dot com>"]
description = "Rust crate to read/write JSON compilation database file."
keywords = ["clang", "clang-tooling", "compilation-database"]
repository = "https://github.com/rizsotto/json_compilation_db"
homepage = "https://github.com/rizsotto/json_compilation_db"
documentation = "https://docs.rs/json_compilation_db/"
license = "MIT"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0.116"
shell-words = "1.1"
